# starlighter

./: .gitignore  ISSUE2.md  LICENSE  README.md  pyproject.toml
.github/workflows/: create-release.yml  quality.yml  release.yml  update-demo.yml
dev_tools/: baseline.json  run_benchmarks.sh
dev_tools/benchmark/: __init__.py  framework.py  metrics.py  runner.py
examples/: app.py  fasthtml_integration.py  pyproject.toml
starlighter/: __init__.py  themes.py
tests/: COVERAGE.md  README.md  test_error_handling.py  test_highlight_api.py  test_highlight_function.py  test_integration_core.py  test_integration_features.py  test_parser_consolidated.py  test_performance.py  test_performance_enhanced.py  test_themes.py
tests/benchmarks/: __init__.py  sample_files.py
tests/fixtures/: __init__.py  accuracy_benchmark.py  complex_examples.py  sample_code.py  xss_attack_vectors.py
